--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,10 @@
         "ImportDeclaration": "never",
         "ExportDeclaration": { "multiline": true, "minProperties": 3 }
       }
-    ]
+    ],
+    "import/no-unresolved": [
+      2,
+      { "caseSensitive": false }
+   ]
   }
 }
