--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@types/react-router-dom": "^5.3.2",
+    "easyinvoice": "^1.0.153",
     "history": "^5.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
