--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,7 @@
       {
         "ObjectExpression": { "consistent": true, "multiline": true },
         "ObjectPattern": { "consistent": true, "multiline": true },
-        "ImportDeclaration": "never",
+        "ImportDeclaration": { "consistent": true, "multiline": true },
         "ExportDeclaration": { "multiline": true, "minProperties": 3 }
       }
     ]
