--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "react-simple-star-rating": "^4.0.5",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
