--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "react-hook-form": "^7.20.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-simple-star-rating": "^4.0.5",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
