--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-hook-form": "^7.20.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "react-simple-star-rating": "^4.0.5",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
@@ -44,6 +44,7 @@
     "eslint-config-airbnb": "^19.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
