--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "easyinvoice": "^2.2.6",
     "history": "^5.1.0",
     "jwt-decode": "^3.1.2",
+    "mini-css-extract-plugin": "^2.4.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
