--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "easyinvoice": "^2.2.6",
     "history": "^5.1.0",
     "jwt-decode": "^3.1.2",
-    "mini-css-extract-plugin": "^2.4.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -51,6 +50,7 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-testing-library": "^3.10.2",
+    "mini-css-extract-plugin": "2.4.5",
     "sass": "^1.43.4"
   },
   "repository": {
