--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@cloudinary/react": "^1.0.1",
+    "@cloudinary/url-gen": "^1.4.2",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "easyinvoice": "^2.2.6",
