--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "npm run static-code-analysis && npm run dynamic-code-analysis",
+    "test2": "cypress open",
     "static-code-analysis": "npm run prettier",
     "dynamic-code-analysis": "react-scripts test",
     "prettier": "prettier --check \"src/**/*.{js,jsx}\"",
@@ -17,11 +18,11 @@
     "npm": "8.1.0"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.0.1",
+    "@cloudinary/url-gen": "^1.4.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@cloudinary/react": "^1.0.1",
-    "@cloudinary/url-gen": "^1.4.2",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "easyinvoice": "^2.2.6",
@@ -46,6 +47,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/node": "10.12.9",
+    "@types/react": "16.9.0",
+    "cypress": "^9.4.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -55,10 +59,8 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-testing-library": "^3.10.2",
-    "sass": "^1.43.4",
-    "@types/node": "10.12.9",
-    "@types/react": "16.9.0",
-    "prettier": "1.16.4"
+    "prettier": "1.16.4",
+    "sass": "^1.43.4"
   },
   "repository": {
     "type": "git",
