--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "npm run static-code-analysis && npm run dynamic-code-analysis",
-    "test2": "cypress open",
+    "e2e": "cypress open",
     "static-code-analysis": "npm run prettier",
     "dynamic-code-analysis": "react-scripts test",
     "prettier": "prettier --check \"src/**/*.{js,jsx}\"",
