--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "easyinvoice": "^2.2.6",
     "history": "^5.1.0",
     "jwt-decode": "^3.1.2",
+    "mapbox-gl": "^2.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
+    "react-map-gl": "^7.0.6",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
